styles.css
/* Stylesheet for the tile viewer */

body,
html {
  margin: 0;
  background-color: black;
  color: white;
  font-family: "Arial", sans-serif;
  user-select: none;
}

.background {
  position: fixed;
  width: 100%;
  height: 100%;
  background-repeat: repeat;
  background-size: 1024px 1024px;
}

button,
input[type="file"] {
  background-color: #34495e;
  border: 2px solid #2c3e50;
  color: white;
  cursor: pointer;
}

button:hover,
input[type="file"]:hover {
  background-color: #2e86df;
  border: 2px solid #2e86df;
}

#current-file-info {
  color: white;
  user-select: all;
}

#help-button {
  position: fixed;
  right: 0px;
}

.modal-content {
  display: none;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 9999;
  background-color: rgba(0, 0, 0, 0.8);
  padding: 20px;
  border-radius: 20px;
  user-select: text;
  max-height: 70vh; /* Set a maximum height for the list to fit within the modal */
  overflow-y: auto; /* Enable vertical scrolling for the list */
}

.modal-content button {
  background-color: #2e86df;
  border: 2px solid #2e86df;
  color: white;
  padding: 10px;
  cursor: pointer;
  user-select: none;
}

.modal-content button:hover {
  background-color: #1f65c9;
  border: 2px solid #1f65c9;
}

.modal-content ul li {
  margin-bottom: 10px;
}

